[package]
name = "yam"
version = "0.1.0"
authors = ["Emery Weber <eweb101@gmail.com>"]
edition = "2018"

[lib]
name = "yam_lib"
path = "src/lib.rs"

#[[bin]]
#name = "yam"
#path = "src/main.rs"

[dependencies]
async-std = { version = "1.6.3", features = ["attributes"] }
sqlx = { version = "0.4.0-beta.1", features = ["mysql","postgres"] }
serde = { version = "1.0.115", features = ["derive"] }
http-types = "2.4.0"
http-client = "4.0.0"
surf = "1.0.3"
log = "0.4.11"
env_logger = "0.7.1"
futures = "0.3.5"
dotenv = "0.15.0"
toml = "0.5.6"
regex = "1.3.9"
futures-io = "0.3.5"
dockworker = "0.0.18"
